update save to file

--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -83,8 +83,12 @@
     "\n",
     "# Save tokens to output.txt\n",
     "f = open('outputs/output.txt', 'w')\n",
+    "tmp_tokens = tokens\n",
+    "for i in range(len(tmp_tokens)):\n",
+    "    if '\\n' in tmp_tokens[i]:\n",
+    "        tmp_tokens[i] = tmp_tokens[i].replace('\\n', ' ')\n",
     "SEP = '\\n'\n",
-    "f.write(SEP.join(tokens))\n",
+    "f.write(SEP.join(tmp_tokens))\n",
     "f.close"
    ]
   },
@@ -97,15 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40100\n",
-      "Question b: 0.008367891752451468\n"
+      "40098\n",
+      "Question b: 0.008367474401241871\n"
      ]
     }
    ],
@@ -126,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The top 20 tokens with the most occurrences\n",
+      "The top 20 tokens with the most occurrences:\n",
       "[('the', 257211), (',', 241445), ('of', 156123), ('.', 139317), ('and', 132850), ('to', 129884), ('or', 108938), ('in', 79954), (')', 76081), ('(', 75059), ('any', 62239), ('*', 61928), ('a', 53118), ('shall', 48794), ('\"', 44393), ('by', 44317), ('agreement', 43631), ('this', 39989), ('be', 39702), ('for', 38727)]\n"
      ]
     }
@@ -144,8 +148,11 @@
     "print(counts.most_common(20))\n",
     "\n",
     "f = open('outputs/tokens.txt', 'w')\n",
-    "for each in counts.most_common():\n",
-    "    f.write(each[0] + '\\t' + str(each[1]) + '\\n')\n",
+    "tmp_counts = counts\n",
+    "for each in tmp_counts.most_common():\n",
+    "    if '\\n' in each[0]:\n",
+    "        each[0] = each[0].replace('\\n', ' ')\n",
+    "    f.write(each[0] + '\\t\\t' + str(each[1]) + '\\n')\n",
     "f.close()"
    ]
   },
@@ -158,14 +165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15521 tokens only appeared once\n"
+      "15520 tokens only appeared once\n"
      ]
     }
    ],
